W06 Final Project Part 2: Last Two Collections with Crud Operations, OAuth and Testing V.0.6
